[package]
edition = "2018"
name = "steady-integration"
version = "0.1.0"

[dependencies]
anyhow = "^1.0"
prost = "0.8"
steady = {path = "../steady"}
serde = {version = "^1.0", features = ["derive"]}
tokio = {version = "^1.0", features = ["full"]}
tracing = "*"
tracing-subscriber = {version = "0.2.17", default-features = false, features = ["env-filter", "fmt", "ansi", "json"]}

[build-dependencies]
prost-build = "0.8"
