[package]
edition = "2018"
name = "rjobs"
version = "0.1.0"

[dependencies]
async-trait = "^0.1"
bincode = "^1.0"
chrono = {version = "^0.4", features = ["serde"]}
nanoid = "^0.4"
redis = {version = "^0.21", features = ["tokio-comp"]}
rjobs-macros = {path = "../rjobs-macros"}
serde = {version = "^1.0", features = ["derive"]}
thiserror = "^1.0"
tokio = {version = "^1.0", features = ["time", "sync"]}
tracing = "^0.1"
# typetag = "^0.1"
rjobs-typetag = {path = "../typetag"}

[dev-dependencies]
anyhow = "^1.0"
test-env-log = {version = "0.2.7", features = ["trace"], default-features = false}
tokio = {version = "^1.0", features = ["full"]}
tracing-subscriber = {version = "0.2.17", default-features = false, features = ["env-filter", "fmt"]}
