[package]
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["encoding"]
description = "Serde serializable and deserializable trait objects"
documentation = "https://docs.rs/typetag"
edition = "2018"
keywords = ["serde"]
license = "MIT OR Apache-2.0"
name = "rjobs-typetag"
readme = "README.md"
repository = "https://github.com/dtolnay/typetag"
version = "0.1.7"

[dependencies]
erased-serde = "0.3"
inventory = "0.1"
lazy_static = "1.0"
serde = {version = "1.0", features = ["derive"]}
typetag-impl = {version = "=0.1.7", path = "impl"}

[dev-dependencies]
bincode = "1.0"
serde_json = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
